--- a/mnist/mnist.vcxproj.filters
+++ b/mnist/mnist.vcxproj.filters
@@ -44,4 +44,7 @@
       <Filter>標頭檔</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+  </ItemGroup>
 </Project>
