--- a/mnist/mnist.vcxproj
+++ b/mnist/mnist.vcxproj
@@ -164,7 +164,7 @@
     <ClInclude Include="mnist.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="README.md" />
+    <None Include="..\README.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
