--- a/RNN/RNN/RNN.vcxproj.filters
+++ b/RNN/RNN/RNN.vcxproj.filters
@@ -1,44 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="來源檔案">
+    <Filter Include="Source Files">
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="標頭檔">
+    <Filter Include="Header Files">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
     </Filter>
-    <Filter Include="資源檔">
+    <Filter Include="Resource Files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="來源檔案\sub">
-      <UniqueIdentifier>{cc2243e4-eff4-4b0f-a26e-c8e795e9a92c}</UniqueIdentifier>
+    <Filter Include="Resource Files\sub">
+      <UniqueIdentifier>{63ce0724-c71e-472f-9e94-155bbcee2aa6}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="mnist.cpp">
-      <Filter>來源檔案</Filter>
+    <ClCompile Include="main.cpp">
+      <Filter>Resource Files</Filter>
     </ClCompile>
-    <ClCompile Include="true_main.cpp">
-      <Filter>來源檔案</Filter>
+    <ClCompile Include="rnn_gen.cpp">
+      <Filter>Resource Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="mnist_official.txt">
-      <Filter>來源檔案\sub</Filter>
+    <Text Include="D:\Desktop\neural network\RNN\note.txt">
+      <Filter>Resource Files\sub</Filter>
     </Text>
-    <Text Include="D:\Desktop\neural network\mnist\note.txt">
-      <Filter>來源檔案\sub</Filter>
-    </Text>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="mnist.h">
-      <Filter>標頭檔</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="..\README.md" />
   </ItemGroup>
 </Project>
